force-app/main/default/objects/Ext_Provider_ID_Pub__c/Ext_Provider_ID_Pub__c.object-meta.xml
<CustomObject>
    <label>External Provider ID Publications</label>
    <nameField>
        <label>External Provider ID Publications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Provider ID Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>