force-app/main/default/objects/Ext_Provider_ID_Pub__c/fields/I_RS_External_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Provider_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Provider ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>