force-app/main/default/objects/Ext_Provider_ID_Pub__c/fields/I_RS_Provider__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
                <label>CiNii EN</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CiNii JP</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Crossref</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>DBLP</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Europe PubMed Central</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Google Books</label>
            </value>
            <value>
                <fullName>2147483646</fullName>
                <label>Local Source 1</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>MLA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PubMed</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>RePEc</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Scopus</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>SSRN</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Web of Science</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>RM ECODE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>